--- a/Hodor/Base.lproj/LaunchScreen.storyboard
+++ b/Hodor/Base.lproj/LaunchScreen.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,8 +14,8 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Fhm-x3-uKG"/>
-                        <viewControllerLayoutGuide type="bottom" id="df8-Ag-J5u"/>
+                        <viewControllerLayoutGuide type="top" id="a3h-x6-9mw"/>
+                        <viewControllerLayoutGuide type="bottom" id="pKf-rX-h8n"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
