--- a/Hodor/Base.lproj/Main.storyboard
+++ b/Hodor/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -13,8 +14,8 @@
             <objects>
                 <viewController id="9pv-A4-QxB" customClass="FirstViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="tcV-tc-BZK"/>
-                        <viewControllerLayoutGuide type="bottom" id="0ri-59-mJf"/>
+                        <viewControllerLayoutGuide type="top" id="K00-x3-JNb"/>
+                        <viewControllerLayoutGuide type="bottom" id="8Ye-xv-4Fd"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -53,8 +54,8 @@
             <objects>
                 <viewController id="8rJ-Kc-sve" customClass="SecondViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="4oE-tb-n6H"/>
-                        <viewControllerLayoutGuide type="bottom" id="cn0-OH-RJs"/>
+                        <viewControllerLayoutGuide type="top" id="mrS-7g-6Yr"/>
+                        <viewControllerLayoutGuide type="bottom" id="d6l-O4-gaQ"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
