Controllers filled with mocked data (Measurements and Users)

--- a/Hodor/Base.lproj/Main.storyboard
+++ b/Hodor/Base.lproj/Main.storyboard
@@ -18,6 +18,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <view key="tableFooterView" contentMode="scaleToFill" id="TO9-wh-JVh">
+                            <rect key="frame" x="0.0" y="72" width="320" height="1"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        </view>
                         <prototypes>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="MeasurementCell" id="VVb-VY-HuZ" customClass="HMeasurementCell">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
